Avoid jumping layout for login loading spinner

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -51,3 +51,13 @@ a.link {
     font-size: 14px;
     line-height: 14px;
 }
+
+.button-spinner-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.mat-progress-spinner {
+  margin-left: 10px;
+}
